este es la mejora del proyecto en oracle

--- a/frontb/frontend/src/app/components/autor/addautor/addautor.component.html
+++ b/frontb/frontend/src/app/components/autor/addautor/addautor.component.html
@@ -19,14 +19,14 @@
          
     </p-dialog>
 </div>
-            <tr>
+            <tr class="barra">
                 <th>id</th>
                 <th>nombre</th>
                 
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-autor>
-            <tr>
+            <tr class="tabla">
                 <td>{{ autor.id }}</td>
                 <td>{{ autor.nombre }}</td>
                 
