--- a/frontb/frontend/src/app/components/escritores/addescritor/addescritor.component.html
+++ b/frontb/frontend/src/app/components/escritores/addescritor/addescritor.component.html
@@ -24,7 +24,7 @@
          
     </p-dialog>
 </div>
-            <tr>
+            <tr class="barra">
                 <th>id</th>
                 <th>Dia Mes Año</th>
                 <th>autor</th>
@@ -33,7 +33,7 @@
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-escritor>
-            <tr>
+            <tr class="tabla">
                 <td>{{ escritor.id }}</td>
                 <td>{{ escritor.dia_mes_ano}}</td>
                 <td>{{ escritor.autor }}</td>
