--- a/frontb/frontend/src/app/components/layout/aside/aside.component.html
+++ b/frontb/frontend/src/app/components/layout/aside/aside.component.html
@@ -1,3 +1,5 @@
-<div class="card flex justify-content-center">
-    <p-panelMenu [model]="opc" [style]="{'width':'300px'}" [multiple]="true"></p-panelMenu>
+<div class="aside">
+    <p-panelMenu class="menu" [model]="opc" [style]="{'width':'300px','background':'green'}" [multiple]="true"></p-panelMenu>
 </div>
+
+
