--- a/frontb/frontend/src/app/components/layout/header/header.component.css
+++ b/frontb/frontend/src/app/components/layout/header/header.component.css
@@ -1,6 +1,6 @@
 .header{
-    background-color: #BF4342;
-    color:#ffff;
+    background-color:green;
+    color:#FFFF;
     display: flex;
     justify-content: center;
     align-items: center;
