--- a/frontb/frontend/src/app/components/libros/addlibro/addlibro.component.html
+++ b/frontb/frontend/src/app/components/libros/addlibro/addlibro.component.html
@@ -25,7 +25,7 @@
          
     </p-dialog>
 </div>
-            <tr>
+            <tr class="barra">
                 <th>id</th>
                 <th>Titulo</th>
                 <th>Numero de Paginas</th>
@@ -34,7 +34,7 @@
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-libro>
-            <tr>
+            <tr class="tabla">
                 <td>{{ libro.id }}</td>
                 <td>{{ libro.titulo}}</td>
                 <td>{{ libro.numero_pagina }}</td>
