--- a/frontb/frontend/src/app/components/prestamo/addprestamo/addprestamo.component.html
+++ b/frontb/frontend/src/app/components/prestamo/addprestamo/addprestamo.component.html
@@ -17,14 +17,14 @@
           </form>
         </p-dialog>
     </div>
-    <tr>
+    <tr class="barra">
         <th>id</th>
         <th>fecha devolucion</th>
         <th>fecha prestamo</th>           
     </tr>
 </ng-template>
 <ng-template pTemplate="body" let-prestamo>
-    <tr>
+    <tr class=" tabla">
         <td>{{ prestamo.id }}</td>
         <td>{{ prestamo.fecha_devolucion}}</td>
         <td>{{ prestamo.fecha_prestamo }}</td>         
