--- a/frontb/frontend/src/app/components/prestamo/mostrarprestamo/mostrarprestamo.component.html
+++ b/frontb/frontend/src/app/components/prestamo/mostrarprestamo/mostrarprestamo.component.html
@@ -1,14 +1,14 @@
 <div class="card">
     <p-table [paginator]="true" [rows]="5" [value]="prestamo" [tableStyle]="{ 'min-width': '50rem' }">
         <ng-template pTemplate="header">
-            <tr>
+            <tr class="barra">
                 <th>id</th>
                 <th>fecha devolucion</th>
                 <th>fecha prestamo</th>           
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-prestamo>
-            <tr>
+            <tr class="tabla">
                 <td>{{ prestamo.id }}</td>
                 <td>{{ prestamo.fecha_devolucion}}</td>
                 <td>{{ prestamo.fecha_prestamo }}</td>         
