--- a/frontend/frontend/src/app/components/Productos/crearproducto/crearproducto.component.html
+++ b/frontend/frontend/src/app/components/Productos/crearproducto/crearproducto.component.html
@@ -28,7 +28,7 @@
          
     </p-dialog>
 </div>
-<tr>
+<tr class="barra">
     <th>Id</th>
     <th>Nombre</th>
     <th>Marca</th>
@@ -39,7 +39,7 @@
 </tr>
 </ng-template>
 <ng-template pTemplate="body" let-producto>
-<tr>
+<tr class="tabla">
     <td>{{producto.id}}</td>
     <td>{{producto.nombre}}</td>
     <td>{{producto.marca}}</td>
