--- a/frontend/frontend/src/app/components/Productos/mostrarproducto/mostrarproducto.component.html
+++ b/frontend/frontend/src/app/components/Productos/mostrarproducto/mostrarproducto.component.html
@@ -6,7 +6,7 @@
 <p-table [value]="producto">
     <ng-template pTemplate="header">
     
-        <tr>
+        <tr class="barra">
             <th>Id</th>
             <th>Nombre</th>
             <th>Marca</th>
@@ -17,7 +17,7 @@
         </tr>
     </ng-template>
     <ng-template pTemplate="body" let-producto>
-        <tr>
+        <tr class="tabla">
             <td>{{producto.id}}</td>
             <td>{{producto.nombre}}</td>
             <td>{{producto.marca}}</td>
