--- a/frontend/frontend/src/app/components/layout/header/header.component.html
+++ b/frontend/frontend/src/app/components/layout/header/header.component.html
@@ -1,1 +1,5 @@
-<p>header works!</p>
+<div class="header">
+    <h1 class="titulo">
+        S  I  T  E       A  L  M  A  C  E  N
+    </h1>
+</div>
