--- a/frontend/frontend/src/app/components/tipoProductos/mostrartipoproducto/mostrartipoproducto.component.html
+++ b/frontend/frontend/src/app/components/tipoProductos/mostrartipoproducto/mostrartipoproducto.component.html
@@ -4,14 +4,14 @@
 <p-table [value]="mostrar">
     <ng-template pTemplate="header">
     
-        <tr>
+        <tr class="barra">
             <th>Id</th>
             <th>Nombre</th>
         
         </tr>
     </ng-template>
     <ng-template pTemplate="body" let-mostrar>
-        <tr>
+        <tr class="tabla">
             <td>{{mostrar.id}}</td>
             <td>{{mostrar.nombre}}</td>
           
