--- a/frontb/frontend/src/app/app.component.html
+++ b/frontb/frontend/src/app/app.component.html
@@ -8,7 +8,7 @@
   </aside>
 
   <section>
-      <app-content></app-content>
+      <app-content class="setion"></app-content>
       <router-outlet></router-outlet>
   </section>
 
