--- a/frontb/frontend/src/app/components/autor/mostrarautor/mostrarautor.component.html
+++ b/frontb/frontend/src/app/components/autor/mostrarautor/mostrarautor.component.html
@@ -1,14 +1,14 @@
 <div class="card">
     <p-table [paginator]="true" [rows]="5" [value]="autores" [tableStyle]="{ 'min-width': '50rem' }">
         <ng-template pTemplate="header">
-            <tr>
+            <tr class="barra">
                 <th>id</th>
                 <th>nombre</th>          
                
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-autor>
-            <tr>
+            <tr class="tabla">
                 <td>{{ autor.id }}</td>
                 <td>{{ autor.nombre }}</td>             
             </tr>
