--- a/frontb/frontend/src/app/components/ejemplares/addejemplares/addejemplares.component.html
+++ b/frontb/frontend/src/app/components/ejemplares/addejemplares/addejemplares.component.html
@@ -17,7 +17,7 @@
              </form>
         </p-dialog>
              </div>
-            <tr>
+            <tr class="barra">
                 <th>id</th>
                 <th>libro</th>
                 <th>localizacion</th>
@@ -25,7 +25,7 @@
             </tr>
           </ng-template>
         <ng-template pTemplate="body" let-ejemplare>
-            <tr>
+            <tr class="tabla">
                 <td>{{ ejemplare.id }}</td>
                 <td>{{ ejemplare.libro }}</td>
                 <td>{{ ejemplare.localizacion }}</td>
