--- a/frontb/frontend/src/app/components/escritores/mostrarescritor/mostrarescritor.component.html
+++ b/frontb/frontend/src/app/components/escritores/mostrarescritor/mostrarescritor.component.html
@@ -1,7 +1,7 @@
 <div class="card">
     <p-table [paginator]="true" [rows]="5" [value]="escritor" [tableStyle]="{ 'min-width': '50rem' }">
         <ng-template pTemplate="header">
-            <tr>
+            <tr class="barra">
                 <th>id</th>
                 <th>dia mes año</th>
                 <th>autor</th>
@@ -10,7 +10,7 @@
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-escritor>
-            <tr>
+            <tr class ="tabla">
                 <td>{{ escritor.id }}</td>
                 <td>{{ escritor.dia_mes_ano}}</td>
                 <td>{{ escritor.autor }}</td>
