--- a/frontb/frontend/src/app/components/usuarios/usuario-form/usuario-form.component.css
+++ b/frontb/frontend/src/app/components/usuarios/usuario-form/usuario-form.component.css
@@ -1,8 +1,10 @@
 .user-form {
+    background: green;
+    color: #CDEDF6;
     max-width: 400px;
     margin: 20px auto;
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 2px solid #E63462;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
@@ -20,15 +22,30 @@
   }
   
   button {
-    background-color: #4caf50;
-    color: white;
+    background-color: #E63462;
+    color: #CDEDF6;
     padding: 10px 15px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    
   }
-  
+
+  .tabla{
+    background-color:#CDEDF6;
+    color:green;
+
+}
+.barra th{
+    background-color:green;
+    color:beige;
+
+}
+
+
   button:hover {
-    background-color: #45a049;
+    background-color:#CDEDF6;
+    color: #E63462;
+    border: 1px solid #E63462;
   }
   
