--- a/frontb/frontend/src/app/components/usuarios/usuario-form/usuario-form.component.html
+++ b/frontb/frontend/src/app/components/usuarios/usuario-form/usuario-form.component.html
@@ -6,7 +6,7 @@
         <ng-template pTemplate="header">
 
             
-<div class="card flex justify-content-center">
+<div class="card flex justify-content-center ventana">
     <p-button (click)="showDialog()" icon="pi pi-external-link" label="Agregar Usuario"></p-button>
     <p-dialog header="Agregar Usuario" [(visible)]="visible" [style]="{width: '50vw'}">
         <form [formGroup]="userForm" (ngSubmit)="onSubmit()" class="user-form">
@@ -28,22 +28,24 @@
          
     </p-dialog>
 </div>
-            <tr>
-                <th>id</th>
-                <th>nombre</th>
-                <th>apellido</th>
-                <th>direccion</th>
-                <th>telefono</th>
-            </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-usuario>
-            <tr>
-                <td>{{ usuario.id }}</td>
-                <td>{{ usuario.nombre }}</td>
-                <td>{{ usuario.apellido }}</td>
-                <td>{{ usuario.direccion }}</td>
-                <td>{{ usuario.telefono }}</td>
-            </tr>
-        </ng-template>
-    </p-table>
+<tr class="barra">
+    <th>id</th>
+    <th>nombre</th>
+    <th>apellido</th>
+    <th>direccion</th>
+    <th>telefono</th>
+</tr>
+</ng-template>
+<ng-template pTemplate="body" let-usuario>
+<tr class="tabla"> 
+    <td>{{ usuario.id }}</td>
+    <td>{{ usuario.nombre }}</td>
+    <td>{{ usuario.apellido }}</td>
+    <td>{{ usuario.direccion }}</td>
+    <td>{{ usuario.telefono }}</td>
+</tr>
+</ng-template>
+</p-table>
 </div>
+ 
+          
