--- a/frontend/frontend/src/app/components/layout/aside/aside.component.css
+++ b/frontend/frontend/src/app/components/layout/aside/aside.component.css
@@ -1,3 +1,10 @@
-p{
-    color: chocolate;
+.aside{
+    background-color:#CDEDF6;
+    color:bisque;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 }
+
